--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/emmanuelnwogbo/template-4#readme",
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
